# dltransform

./: CMakeLists.txt  app.cpp  app.h  app.ui  data.cpp  data.h  dlinputsourcedialog.cpp  dlinputsourcedialog.h  dlinputsourcedialog.ui  doublelineformatterdialog.cpp  doublelineformatterdialog.h  doublelineformatterdialog.ui  encoding.cpp  encoding.h  formatter.cpp  formatter.h  inputsource.cpp  inputsource.h  inputsourcedialog.cpp  inputsourcedialog.h  inputsourcedialog.ui  main.cpp  outputsink.cpp  outputsink.h  streamencoder.cpp  streamencoder.h  utils.cpp  utils.h
dependency/iconv/lib/: libiconv.lib
